--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,14 @@ lto = true
 
 [dependencies]
 adw = { package = "libadwaita", version = "0.7", features = ["v1_6"] }
+artifex-rpc = { version = "0.1.1", git = "https://github.com/elebihan/artifex", rev = "98a822f"}
 async-channel = "2.3.1"
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
 gtk = { version = "0.9", package = "gtk4", features = ["v4_12", "blueprint"] }
+humantime = "2.2.0"
 once_cell = "1.19.0"
 thiserror = "1.0.52"
 tokio = { version = "1.44.1", features = ["time", "rt-multi-thread", "sync"] }
+tonic = "0.11"
 tracing = "0.1"
 tracing-subscriber = "0.3"
